--- a/project/config_example.env
+++ b/project/config_example.env
@@ -1,2 +1,11 @@
 DEBUG=True
-DATABASE_URL=postgres://user:password@db:5432/database
+DEBUG_TOOLBAR=True
+
+DATABASE_URL=postgres://user:password@db:5432/dbname
+CACHE_URL=rediscache://redis:6379/1?client_class=django_redis.client.DefaultClient
+
+# Email
+USE_MAILHOG=True
+EMAIL_HOST=localhost
+
+BASE_URL_SCHEMA=http
