add admin config add django api support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,9 +32,9 @@ flower = "*"
 sendgrid-python = "*"
 slackclient = "*"
 flake8 = "*"
-django-split-settings = "^1.2.0"
-klaviyo = "^3.1.6"
-django-admin-black = "^1.0.0"
+django-split-settings = "*"
+klaviyo = "*"
+django-admin-interface = "*"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "*"
