--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ flake8 = "*"
 django-split-settings = "*"
 klaviyo = "*"
 django-admin-interface = "*"
+django-api-admin = "^1.0.3"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "*"
